---
source: cli/tests/snapshot/main.rs
expression: err
---
error: incompatible rows declaration
  ┌─ [INPUTS_PATH]/errors/mismatched_row_record_pattern_fail.ncl:4:13
  │
4 │   let { x : { a : Number } = { a : String } } = { x = { a = true } } 
  │             ^^^^^^^^^^^^^^ this expression
  │
  = Expected an expression of a record type with the row `a: String`
  = Found an expression of a record type with the row `a: Number`
  = Could not match the two declarations of `a`

error: while typing field `a`: incompatible types
 = Expected an expression of type `String`
 = Found an expression of type `Number`
 = These types are not compatible


